// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Map /> tests Readonly mode works 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div>
          <div
            class="bp3-card bp3-elevation-0 Card--card"
            style="width: 100%;"
          >
            <div
              class="group withoutAligning"
            >
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  keyLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      data-testid="key-test-[0]"
                      disabled=""
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  valueLabel
                </p>
                <div
                  class="group withoutAligning withoutSpacing"
                >
                  <div
                    class="TextInput--main"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        class="bp3-input"
                        data-testid="value-test-[0]"
                        disabled=""
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`<Map /> tests Should render properly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div>
          <div
            class="bp3-card bp3-elevation-0 Card--card"
            style="width: 100%;"
          >
            <div
              class="group withoutAligning"
            >
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  keyLabel
                </p>
                <div
                  class="TextInput--main"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      class="bp3-input"
                      data-testid="key-test-[0]"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                style="flex-grow: 1;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                >
                  valueLabel
                </p>
                <div
                  class="group withoutAligning withoutSpacing"
                >
                  <div
                    class="TextInput--main"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        class="bp3-input"
                        data-testid="value-test-[0]"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="remove-test-[0]"
                    style="margin-top: 4px;"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="20"
                        viewBox="0 0 24 24"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M5.143 9.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.194 1.079H7.717a1.2 1.2 0 01-1.189-1.04L5.143 9.48zm11.837-.16H6.332l1.385 10.207h8.225l1.04-10.207zM9.916 2.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L15 5.179l3.86.882a.6.6 0 01-.267 1.17L5.535 4.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M12 11.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 01-.996.087l-.436-4.98a.5.5 0 01.455-.542zm5.523 0a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              data-testid="add-test"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                plusAdd
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
